--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -52,3 +52,9 @@ jobs:
       - name: Zip the reports
         run: |
           zip -r reports.zip results/reports
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: reports
+          path: reports.zip
