--- a/.github/workflows/run_speed.yml
+++ b/.github/workflows/run_speed.yml
@@ -15,7 +15,7 @@ on:
         default: 8
       output_dir:
         description: 'Output directory for results'
-        default: 'results'
+        default: 'results/speed'
       sizes:
         description: 'Comma-separated list of sizes (e.g., 1,64,512,1024,2048)'
         default: '1,64,512,1024,2048'
